Update Recommender System Modeling Using Matrix Factorization.ipynb

--- a/RECOMMENDER SYSTEM/Recommender System Modeling Using Matrix Factorization.ipynb
+++ b/RECOMMENDER SYSTEM/Recommender System Modeling Using Matrix Factorization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -23,13 +23,7 @@
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "import re\n",
     "import random\n",
-    "#import plotly.graph_objs as go\n",
-    "#import plotly.plotly as py\n",
     "pd.options.display.max_columns = 30\n",
-    "#from IPython.core.interactiveshell import InteractiveShell\n",
-    "#import plotly.figure_factory as ff\n",
-    "#InteractiveShell.ast_node_interactivity = 'all'\n",
-    "#from plotly.offline import iplot\n",
     "df = pd.read_csv('TripAdvReview.csv', encoding=\"latin-1\", na_values='')\n",
     "df.head()\n",
     "print('We have ', len(df), 'rentals in the data')"
@@ -37,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -84,6 +78,26 @@
    ],
    "source": [
     "print_reviews(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Mistiso's Place Vacation Rentals- Purcell Suite\""
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Title'][1]"
    ]
   },
   {
