Update Building Recommender System using Cosine Similarity.ipynb

--- a/RECOMMENDER SYSTEM/Building Recommender System using Cosine Similarity.ipynb
+++ b/RECOMMENDER SYSTEM/Building Recommender System using Cosine Similarity.ipynb
@@ -449,7 +449,7 @@
     "print(\"Length of reviews: \",len(df.Reviews))\n",
     "print(\"Review at index 6:\\n \", df.Reviews[6])\n",
     "print(\"Label of the review at Index 6: \",df.Rating[6])\n",
-    "# The ratings laels is a continous series of float numbers"
+    "# The ratings labels is a continous series of float numbers"
    ]
   },
   {
@@ -490,7 +490,6 @@
    "outputs": [],
    "source": [
     "#Label Encoding for Categorical Target Variable\n",
-    "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "lb = LabelEncoder()\n",
@@ -653,9 +652,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import Term Frequency\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "tfidf = TfidfVectorizer(stop_words='english')  #Import Term Frequency "
+    "tfidf = TfidfVectorizer(stop_words='english')   "
    ]
   },
   {
@@ -664,7 +664,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf_matrix = tfidf.fit_transform(df['Reviews']) # transforming Rentals Reviews"
+    "#transforming Rentals Reviews\n",
+    "tfidf_matrix = tfidf.fit_transform(df['Reviews']) "
    ]
   },
   {
@@ -684,7 +685,8 @@
     }
    ],
    "source": [
-    "tfidf_matrix.shape   #each Rental Review converted to 1143 word vector. 1143 different words were used to describe blogs"
+    "tfidf_matrix.shape   \n",
+    "#each Rental Review converted to 1142 word vector. 1142 different words were used to describe blogs"
    ]
   },
   {
@@ -693,15 +695,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics.pairwise import linear_kernel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics.pairwise import linear_kernel\n",
     "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix)"
    ]
   },
