code and file update

--- a/RECOMMENDER SYSTEM/Recommender System Modeling Using Matrix Factorization.ipynb
+++ b/RECOMMENDER SYSTEM/Recommender System Modeling Using Matrix Factorization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "\"Mistiso's Place Vacation Rentals- Purcell Suite\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1924,21 +1924,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"4db23652-f82a-483f-b8ec-f61dddce3e4c\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"fa3b798e-0049-4ec1-8699-ad350d9efd27\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"4db23652-f82a-483f-b8ec-f61dddce3e4c\")) {\n",
+       "                if (document.getElementById(\"fa3b798e-0049-4ec1-8699-ad350d9efd27\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '4db23652-f82a-483f-b8ec-f61dddce3e4c',\n",
+       "                        'fa3b798e-0049-4ec1-8699-ad350d9efd27',\n",
        "                        [{\"histfunc\": \"count\", \"histnorm\": \"\", \"marker\": {\"color\": \"rgba(255, 153, 51, 1.0)\", \"line\": {\"color\": \"#000000\", \"width\": 1.3}}, \"name\": \"word_count\", \"nbinsx\": 50, \"opacity\": 0.8, \"orientation\": \"v\", \"type\": \"histogram\", \"x\": [12, 12, 10, 14, 11, 12, 15, 14, 14, 13, 14, 13, 13, 11, 12, 11, 13, 15, 13, 12, 11, 14, 12, 11, 11, 13, 15, 16, 15, 12, 14, 13, 14, 16, 15, 13, 13, 13, 12, 11, 12, 11, 14, 12, 16, 11, 12, 17, 14, 13, 13, 9, 16, 12, 16, 12, 11, 18, 14, 10, 14, 11, 16, 18, 8, 14, 14, 15, 13, 11, 14, 12, 13, 12, 12, 13, 12, 12, 13, 17, 14, 1, 12, 14, 11, 14, 15, 12, 18, 13, 16, 11, 14, 15, 13, 12, 11, 13, 16, 13, 8, 12, 11, 10, 11, 8, 13, 1, 16, 15, 10, 9, 12, 11, 15, 8, 13, 14, 20, 14, 11, 13, 7, 10, 16, 10, 11, 10, 14, 14, 14, 12, 13, 13, 1, 11, 14, 8, 12, 12, 16, 1, 1, 13, 14, 13, 13, 18, 18, 14, 11, 14, 14, 11, 14, 14, 14, 12, 14, 15, 14, 12, 13, 14, 12, 1, 13, 14, 1, 11, 14, 1, 15, 15, 13, 13, 1, 12, 10, 12, 14, 11, 12, 12, 15, 16, 15, 13, 13, 17, 14, 10, 10, 12, 8, 11, 14, 15, 12, 11, 13, 1, 10, 1, 12, 9, 19, 19, 13, 14, 13, 12, 15, 9, 12, 10, 13, 14, 14, 1, 12, 11, 13, 12, 11, 12, 1, 11, 1, 14, 17, 9, 17, 8, 12, 13, 9, 11, 13, 12, 1, 12, 16, 13, 10, 12, 12, 14, 14, 16, 19, 1, 13, 1, 12, 11, 18, 12, 13, 14, 13, 1, 12, 12, 1, 12, 12, 9, 12, 1, 13, 10, 14, 17, 12, 14, 1, 1, 13, 12, 1, 11, 12, 11, 1, 13, 13, 11, 1, 13, 14, 14, 14, 11, 13, 14, 1, 11, 13, 13, 12, 15, 12, 12, 13, 1, 13, 1, 12, 13, 13, 12, 14, 11, 13, 1, 12, 1, 17, 12, 15, 1, 13, 1, 15, 1, 13, 13, 14, 16, 17, 12, 1, 13, 1, 15, 18, 13, 10, 1, 14, 12, 1, 11, 13, 1, 8, 15, 10, 12, 1, 13, 1, 15, 10, 16, 15, 19, 17, 12, 15, 12, 14, 15, 11, 1, 13, 16, 13, 16, 10, 1, 13, 12, 12, 12, 11, 12, 12, 1, 13, 1, 12, 12, 1, 13, 19, 12, 13, 12, 13, 1, 14, 11, 13, 1, 13, 17, 16, 14, 15, 11, 13, 13, 13, 14, 13, 21, 11, 10, 15, 10, 14, 12, 14, 12, 14, 1, 10, 14, 12, 1, 10, 1, 1, 1, 12, 12, 1, 13, 1, 14, 1, 11, 7, 13, 21, 1, 13, 14, 15, 16, 12, 12, 1, 1, 1, 12, 11, 16, 14, 16, 13, 15, 15, 12, 1, 12, 14, 11, 1, 12, 15, 12, 12, 14, 18, 1, 11, 12, 1, 13, 13, 13, 11, 19, 16, 16, 1, 12, 15, 16, 13, 13, 1, 13, 12, 1, 1, 11, 1, 14, 12, 12, 13, 1, 1, 11, 14, 8, 13, 1, 15, 1, 1, 13, 21, 16, 1, 12, 1, 13, 9, 13, 16, 13, 13, 12, 1, 1, 9, 12, 12, 13, 10, 12, 17, 13, 1, 14, 13, 1, 17, 15, 11, 13, 1, 1, 1, 1, 12, 18, 11, 15, 1, 1, 10, 1, 1, 1, 1, 11, 9, 12, 15, 13, 19, 15, 1, 1, 13, 13, 13, 1, 1, 1, 14, 13, 11, 1, 1, 14, 14, 1, 14, 13, 13, 13, 1, 10, 1, 18, 1, 13, 1, 12, 1, 1, 1, 13, 1, 11, 14, 13, 1, 13, 15, 1, 13, 13, 1, 1, 1, 13, 1, 13, 12, 1, 12, 1, 1, 14, 17, 1, 10, 1, 11, 12, 13, 13, 10, 13, 1, 12, 1, 1, 1, 14, 11, 14, 1, 13, 14, 14, 14, 1, 1, 1, 13, 1, 16, 21, 11, 17, 1, 1, 1, 13, 20, 1, 13, 14, 1, 1, 1, 1, 15, 1, 1, 1, 1, 14, 13, 14, 1, 13, 1, 1, 12, 1, 11, 1, 10, 1, 11, 1, 1, 12, 1, 11, 1, 12, 12, 13, 1, 1, 1, 14, 1, 1, 13, 14, 1, 1, 14, 1, 1, 1, 12, 13, 1, 12, 1, 1, 1, 17, 1, 11, 12, 1, 13, 14, 10, 1, 1, 11, 1, 1, 1, 1, 12, 15, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 12, 12, 1, 1, 1, 1, 14, 1, 13, 14, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 12, 1, 1, 1, 1, 1, 1, 1, 11, 1, 1, 1, 1, 1, 13, 12, 1, 1, 1, 1, 1, 1, 1, 1, 11, 1, 1, 1, 1, 1, 15, 1, 16, 1, 1, 1, 1, 1, 1, 1, 1, 1, 13, 1, 13, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 15, 1, 1, 1, 1, 1, 1, 12, 1, 15, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}],\n",
        "                        {\"barmode\": \"overlay\", \"legend\": {\"bgcolor\": \"#F5F6F9\", \"font\": {\"color\": \"#4D5663\"}}, \"paper_bgcolor\": \"#F5F6F9\", \"plot_bgcolor\": \"#F5F6F9\", \"template\": {\"data\": {\"bar\": [{\"error_x\": {\"color\": \"#2a3f5f\"}, \"error_y\": {\"color\": \"#2a3f5f\"}, \"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"bar\"}], \"barpolar\": [{\"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"barpolar\"}], \"carpet\": [{\"aaxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"baxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"type\": \"carpet\"}], \"choropleth\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"choropleth\"}], \"contour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"contour\"}], \"contourcarpet\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"contourcarpet\"}], \"heatmap\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmap\"}], \"heatmapgl\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmapgl\"}], \"histogram\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"histogram\"}], \"histogram2d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2d\"}], \"histogram2dcontour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2dcontour\"}], \"mesh3d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"mesh3d\"}], \"parcoords\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"parcoords\"}], \"pie\": [{\"automargin\": true, \"type\": \"pie\"}], \"scatter\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter\"}], \"scatter3d\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter3d\"}], \"scattercarpet\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattercarpet\"}], \"scattergeo\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergeo\"}], \"scattergl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergl\"}], \"scattermapbox\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattermapbox\"}], \"scatterpolar\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolar\"}], \"scatterpolargl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolargl\"}], \"scatterternary\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterternary\"}], \"surface\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"surface\"}], \"table\": [{\"cells\": {\"fill\": {\"color\": \"#EBF0F8\"}, \"line\": {\"color\": \"white\"}}, \"header\": {\"fill\": {\"color\": \"#C8D4E3\"}, \"line\": {\"color\": \"white\"}}, \"type\": \"table\"}]}, \"layout\": {\"annotationdefaults\": {\"arrowcolor\": \"#2a3f5f\", \"arrowhead\": 0, \"arrowwidth\": 1}, \"coloraxis\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"colorscale\": {\"diverging\": [[0, \"#8e0152\"], [0.1, \"#c51b7d\"], [0.2, \"#de77ae\"], [0.3, \"#f1b6da\"], [0.4, \"#fde0ef\"], [0.5, \"#f7f7f7\"], [0.6, \"#e6f5d0\"], [0.7, \"#b8e186\"], [0.8, \"#7fbc41\"], [0.9, \"#4d9221\"], [1, \"#276419\"]], \"sequential\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"sequentialminus\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]]}, \"colorway\": [\"#636efa\", \"#EF553B\", \"#00cc96\", \"#ab63fa\", \"#FFA15A\", \"#19d3f3\", \"#FF6692\", \"#B6E880\", \"#FF97FF\", \"#FECB52\"], \"font\": {\"color\": \"#2a3f5f\"}, \"geo\": {\"bgcolor\": \"white\", \"lakecolor\": \"white\", \"landcolor\": \"#E5ECF6\", \"showlakes\": true, \"showland\": true, \"subunitcolor\": \"white\"}, \"hoverlabel\": {\"align\": \"left\"}, \"hovermode\": \"closest\", \"mapbox\": {\"style\": \"light\"}, \"paper_bgcolor\": \"white\", \"plot_bgcolor\": \"#E5ECF6\", \"polar\": {\"angularaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"radialaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"scene\": {\"xaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"yaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"zaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}}, \"shapedefaults\": {\"line\": {\"color\": \"#2a3f5f\"}}, \"ternary\": {\"aaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"baxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"caxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"title\": {\"x\": 0.05}, \"xaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}, \"yaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}}}, \"title\": {\"font\": {\"color\": \"#4D5663\"}, \"text\": \"Word Count Distribution in rental reviews\"}, \"xaxis\": {\"gridcolor\": \"#E1E5ED\", \"linecolor\": \"black\", \"showgrid\": true, \"tickfont\": {\"color\": \"#4D5663\"}, \"title\": {\"font\": {\"color\": \"#4D5663\"}, \"text\": \"word count\"}, \"zerolinecolor\": \"#E1E5ED\"}, \"yaxis\": {\"gridcolor\": \"#E1E5ED\", \"linecolor\": \"black\", \"showgrid\": true, \"tickfont\": {\"color\": \"#4D5663\"}, \"title\": {\"font\": {\"color\": \"#4D5663\"}, \"text\": \"count\"}, \"zerolinecolor\": \"#E1E5ED\"}},\n",
        "                        {\"showLink\": true, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('4db23652-f82a-483f-b8ec-f61dddce3e4c');\n",
+       "var gd = document.getElementById('fa3b798e-0049-4ec1-8699-ad350d9efd27');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2071,32 +2071,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['McGregor Bay Island Cottage Rental',\n",
-       " 'Riverfront, Central 3 Bedroom/3 Bathroom Condo in the Heart of Old Quebec',\n",
-       " 'Rivers End Cottage',\n",
-       " 'Stunning Lake View | Beachfront Condo + Saltwater Pool + Hot Tub',\n",
-       " 'Beautiful Home on Chesterman Beach',\n",
-       " 'Cobblestone Farm Retreat',\n",
-       " 'Howe Bay Beach House - PEI Oceanfront Vacation Rental',\n",
-       " 'Best Sauble Beach has to offer!!!!',\n",
-       " 'Tulameen Vacation Cabin',\n",
-       " 'Twilly House - Twillingate Vacation Home Rental']"
+       "['Merigomish',\n",
+       " 'Oceanside Haven Vacation Suite',\n",
+       " 'Cozy Lowertown Home near Byward Market',\n",
+       " 'Halfmoon Haven Beach Cottage',\n",
+       " 'Beautiful 3 Bdrm 2000 SqF with large 22x10 Balcony',\n",
+       " 'Spacious & Relaxed Historic Home with Water View in Trendy Downtown',\n",
+       " \"Diverse Rentals - The Captain's Room\",\n",
+       " 'Hodder House Vacation Home near Trinity, Nl',\n",
+       " 'Bel Air Tremblant Stowe Miniloft #1',\n",
+       " 'BREEZY on Lake of Bays (wheelchair accessible)']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommendations('Red Bay Getaway')"
+    "recommendations(\"Mistiso's Place Vacation Rentals- Purcell Suite\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
