update to environment variables

--- a/DATA PREPROCESSING/Data Processing.ipynb
+++ b/DATA PREPROCESSING/Data Processing.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os \n",
     "os.getcwd()\n",
-    "os.chdir(r'C:\\Users\\MAIN\\Desktop\\ML\\Internship SMinds\\Recommender')\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,11 +72,11 @@
       "4        Stanhope   Prince Edward Island   \n",
       "\n",
       "                                             Reviews  \n",
-      "0  1 mention of vacation rentals\\nThis rental fel...  \n",
-      "1  4 mentions of vacation rentals\\nI can't say en...  \n",
-      "2  1 mention of vacation rentals\\nback yard! Woul...  \n",
-      "3  3 mentions of vacation rentals\\nenjoyable. I h...  \n",
-      "4  2 mentions of vacation rentals\\nquiet morning ...  \n"
+      "0  1 \\nThis rental felt more like a well-appointe...  \n",
+      "1  4 \\nI can't say enough about this beautiful an...  \n",
+      "2  1 \\nback yard! Would recommend the rental for ...  \n",
+      "3  3 \\nenjoyable. I have never stayed in a vacati...  \n",
+      "4  2 \\nquiet morning as we woke up - perfect vaca...  \n"
      ]
     }
    ],
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +139,7 @@
        "      <td>85.0</td>\n",
        "      <td>Niagara Falls</td>\n",
        "      <td>Ontario</td>\n",
-       "      <td>1 mention of vacation rentals This rental felt...</td>\n",
+       "      <td>1  This rental felt more like a well-appointed...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -149,7 +148,7 @@
        "      <td>100.0</td>\n",
        "      <td>Nelson</td>\n",
        "      <td>British Columbia</td>\n",
-       "      <td>4 mentions of vacation rentals I can't say eno...</td>\n",
+       "      <td>4  I can't say enough about this beautiful and...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -158,7 +157,7 @@
        "      <td>36.0</td>\n",
        "      <td>Toronto</td>\n",
        "      <td>Ontario</td>\n",
-       "      <td>1 mention of vacation rentals back yard! Would...</td>\n",
+       "      <td>1  back yard! Would recommend the rental for a...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -167,7 +166,7 @@
        "      <td>34.0</td>\n",
        "      <td>Qualicum Beach</td>\n",
        "      <td>British Columbia</td>\n",
-       "      <td>3 mentions of vacation rentals enjoyable. I ha...</td>\n",
+       "      <td>3  enjoyable. I have never stayed in a vacatio...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -176,7 +175,7 @@
        "      <td>48.0</td>\n",
        "      <td>Stanhope</td>\n",
        "      <td>Prince Edward Island</td>\n",
-       "      <td>2 mentions of vacation rentals quiet morning a...</td>\n",
+       "      <td>2  quiet morning as we woke up - perfect vacat...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -198,14 +197,14 @@
        "4        Stanhope   Prince Edward Island   \n",
        "\n",
        "                                             Reviews  \n",
-       "0  1 mention of vacation rentals This rental felt...  \n",
-       "1  4 mentions of vacation rentals I can't say eno...  \n",
-       "2  1 mention of vacation rentals back yard! Would...  \n",
-       "3  3 mentions of vacation rentals enjoyable. I ha...  \n",
-       "4  2 mentions of vacation rentals quiet morning a...  "
+       "0  1  This rental felt more like a well-appointed...  \n",
+       "1  4  I can't say enough about this beautiful and...  \n",
+       "2  1  back yard! Would recommend the rental for a...  \n",
+       "3  3  enjoyable. I have never stayed in a vacatio...  \n",
+       "4  2  quiet morning as we woke up - perfect vacat...  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +247,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +286,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +322,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +373,7 @@
        "      <td>85.0</td>\n",
        "      <td>Niagara Falls</td>\n",
        "      <td>Ontario</td>\n",
-       "      <td>mention of vacation rentals This rental felt ...</td>\n",
+       "      <td>This rental felt more like a well-appointed ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -383,7 +382,7 @@
        "      <td>100.0</td>\n",
        "      <td>Nelson</td>\n",
        "      <td>British Columbia</td>\n",
-       "      <td>mentions of vacation rentals I can't say enou...</td>\n",
+       "      <td>I can't say enough about this beautiful and ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -392,7 +391,7 @@
        "      <td>36.0</td>\n",
        "      <td>Toronto</td>\n",
        "      <td>Ontario</td>\n",
-       "      <td>mention of vacation rentals back yard! Would ...</td>\n",
+       "      <td>back yard! Would recommend the rental for a ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -401,7 +400,7 @@
        "      <td>34.0</td>\n",
        "      <td>Qualicum Beach</td>\n",
        "      <td>British Columbia</td>\n",
-       "      <td>mentions of vacation rentals enjoyable. I hav...</td>\n",
+       "      <td>enjoyable. I have never stayed in a vacation...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -410,7 +409,7 @@
        "      <td>48.0</td>\n",
        "      <td>Stanhope</td>\n",
        "      <td>Prince Edward Island</td>\n",
-       "      <td>mentions of vacation rentals quiet morning as...</td>\n",
+       "      <td>quiet morning as we woke up - perfect vacati...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -432,14 +431,14 @@
        "4        Stanhope   Prince Edward Island   \n",
        "\n",
        "                                             Reviews  \n",
-       "0   mention of vacation rentals This rental felt ...  \n",
-       "1   mentions of vacation rentals I can't say enou...  \n",
-       "2   mention of vacation rentals back yard! Would ...  \n",
-       "3   mentions of vacation rentals enjoyable. I hav...  \n",
-       "4   mentions of vacation rentals quiet morning as...  "
+       "0    This rental felt more like a well-appointed ...  \n",
+       "1    I can't say enough about this beautiful and ...  \n",
+       "2    back yard! Would recommend the rental for a ...  \n",
+       "3    enjoyable. I have never stayed in a vacation...  \n",
+       "4    quiet morning as we woke up - perfect vacati...  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
