--- a/MODELLING/Deep Learning Model for Recommender Classifier.ipynb
+++ b/MODELLING/Deep Learning Model for Recommender Classifier.ipynb
@@ -1063,7 +1063,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<H4>We have completed our pre-processing, it is now time to build the neural network based classifier. But before we do that, let's split the reviews into training and test set."
+    "<H4>We have completed our pre-processing, it is now time to build the neural network based classifier. We start by splitting the reviews into training and test set."
    ]
   },
   {
@@ -1317,13 +1317,7 @@
       "399/399 [==============================] - 0s 70us/step - loss: 88.2254 - acc: 0.0075\n",
       "Epoch 82/200\n",
       "399/399 [==============================] - 0s 75us/step - loss: 88.2254 - acc: 0.0075\n",
-      "Epoch 83/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/200\n",
       "399/399 [==============================] - 0s 85us/step - loss: 88.2254 - acc: 0.0075\n",
       "Epoch 84/200\n",
       "399/399 [==============================] - 0s 78us/step - loss: 88.2254 - acc: 0.0075\n",
